<resources>
    <string name="app_name">CharityHub</string>
    <string name="charityhub">CharityHub</string>
    <string name="find_and_support_charities_easily">Find and support charities easily!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="not_registered_yet_start_here">Not registered yet? Start here!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="start_donating">Start donating!</string>
    <string name="already_registered_log_here">Already registered? Log here!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="full_name">Full name</string>
    <string name="find_out_more">Find out more</string>
    <string name="enviroment">Enviroment</string>
    <string name="animal_welfare">Animal Welfare</string>
    <string name="child_protection">Child Protection</string>
    <string name="climate_action">Climate Action</string>
    <string name="peace_and_reconciliation">Peace and Reconciliation</string>
    <string name="select_a_country">Select a country</string>
    <string name="summary">Summary</string>
    <string name="challenge">Challenge</string>
    <string name="solution">Solution</string>
    <string name="long_term_impact">Long Term Impact</string>
    <string name="donate_now">Donate now</string>
    <string name="email_or_password_are_not_correct">Email or password are not correct</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="please_insert_a_country">Please insert a country</string>
    <string name="please_insert_a_name">Please insert a name</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="current_donation_progress">Current donation progress</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="image_of_a_project">Image of a project</string>
    <string name="soldi">Soldi</string>
    <string name="descrizione">Descrizione</string>
    <string name="change_country_of_interest">Change country of interest</string>
    <string name="undo_changes">Undo changes</string>
    <string name="log_out">Log out</string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="current_money_amount">Current money amount</string>
    <string name="total_money_amount">Total money amount</string>
    <string name="money_remaining">Money remaining</string>
    <string name="number_of_donations">Number of donations</string>
    <string name="support_this_project">Support this project</string>
</resources>